<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloAndroidActivityStates</string>
    <string name="hello_world">Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! Hello world! </string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello</string>
    <string name="testbuttonlabel">Test action</string>
    <string name="hello_text">New Text</string>
    <string name="hello01_text">hello 01</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="button_label">Click me!</string>
    <string name="my_switch_label">New Switch</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="title_activity_main_linart">MainLinartActivity</string>
    <string name="action_new">New art</string>
    <string name="action_remove">Remove</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_basic_shapes">Shapes</string>
    <string name="basic_shapes">Shapes</string>
    <string name="add_to_background">Add to background</string>
    <string name="switch_mode">Switch linart/background mode</string>
    <string name="menu_save">test menu</string>
    <string name="menu_archive">test menu 01</string>
    <string name="menu_delete">test menu 02</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="test_popup_button_label">Test popup</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="title_activity_main_activity_with_drawing_view">MainActivityWithDrawingView</string>
    <string name="title_activity_main_guard_gate">Gate Entry</string>
    <string name="preference_file_key">com.example.mladen.helloandroidactivitystates.PREFERENCE_FILE_KEY</string>
    <string name="gates_lanes_key">com.example.mladen.helloandroidactivitystates.GATES_LANES_KEY</string>
    <string name="gate_lane_selection_hint">Tap to select gate/lane</string>
    <string name="patron_name_hint">Name</string>
    <string name="patron_group_hint">Group</string>
    <string name="patron_id_hint">ID#</string>
    <string name="plate_hint">Plate</string>
    <string name="patron_info">Patron info</string>
    <string name="open_gate">Open gate</string>
    <string name="action_add_new_patron">Add new patron</string>
    <string name="title_activity_add_new_patron">Enroll patron</string>
    <string name="visiting_info">Visiting info</string>
    <string name="save_btn_label">Save</string>
    <string name="cancel_btn_label">Cancel</string>

</resources>
