<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mladen.helloandroidactivitystates.AddNewPatronActivity"
    android:background="@color/iddylogo">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/horLineDividerGateNumber">

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_gray_line"
            android:layout_weight="1"
            />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/patron_info"
            android:id="@+id/patronInfoTextView"
            android:textColor="@color/iddytextviewbackground" />

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_gray_line"
            android:layout_weight="1"
            />

    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/horLineDividerGateNumber"
        android:id="@+id/patronInfo"
        android:layout_marginTop="16dp"
        android:weightSum="3">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/patronDetails"
            android:layout_weight="2"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patronNameTextView"

                android:textSize="@dimen/patron_info_text_size"
                android:background="@color/iddytextviewbackground"
                android:hint="@string/patron_name_hint"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patronGroupTextView"
                android:layout_below="@id/patronNameTextView"
                android:textSize="@dimen/patron_info_text_size"
                android:background="@color/iddytextviewbackground"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/patron_group_hint"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/patronIdTextView"
                android:layout_below="@id/patronGroupTextView"
                android:textSize="@dimen/patron_info_text_size"
                android:background="@color/iddytextviewbackground"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/patron_id_hint"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/plateTextView"
                android:layout_below="@id/patronIdTextView"
                android:textSize="@dimen/patron_info_text_size"
                android:background="@color/iddytextviewbackground"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:hint="@string/plate_hint"
                android:layout_marginBottom="16dp" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:id="@+id/patronImage"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/patronImageView"
                android:src="@drawable/ic_action_user"
                android:layout_gravity="center" />

        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/patronInfo"
        android:id="@+id/horLineDividerVisitingInfo">

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_gray_line"
            android:layout_weight="1"
            />

        <TextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visiting_info"
            android:id="@+id/visitingInfoTextView"
            android:textColor="@color/iddytextviewbackground" />

        <ImageView
            android:layout_margin="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/shape_gray_line"
            android:layout_weight="1"
            />

    </LinearLayout>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/visiting_spinner"
        android:layout_below="@+id/horLineDividerVisitingInfo"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/notesEditText"
        android:layout_below="@+id/visiting_spinner"
        android:layout_alignStart="@+id/visiting_spinner"
        android:layout_alignEnd="@+id/visiting_spinner"
        android:hint="Notes"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notesEditText"
        android:id="@+id/saveCancelLayout"
        android:layout_marginTop="32dp"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/save_btn_label"
            android:id="@+id/saveButton"
            android:layout_weight="1"
            android:onClick="saveBtnAction" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_label"
            android:id="@+id/cancelButton"
            android:layout_weight="1"
            android:onClick="cancelBtnAction" />

    </LinearLayout>

    <include
        layout="@layout/footerwithlogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/include" />

</RelativeLayout>
